last files to complete the four implementations

--- a/hello-twitter-nodejs/web/index.html
+++ b/hello-twitter-nodejs/web/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
       var require = {
         baseUrl: "/j",
-        deps: ["cs!app"]
+        deps: ["app"]
       };
     </script>
     <script type="text/javascript" src="/j/require.js"></script>
